@@ -28,7 +28,12 @@
 	Handle stepping into a function in reverse.
 	Handle stepping between line ranges in reverse.
 	(print_stop_reason): Print reason for NO_HISTORY.
-	
+
+2006-03-31  Michael Snyder  <msnyder@redhat.com>
+
+	* infrun.c: Make sure to check for EXEC_REVERSE not EXEC_FORWARD,
+	since targets that don't implement execdir will return EXEC_ERROR.
+
 2006-03-31  Andrew Stubbs  <andrew.stubbs@st.com>
 
 	* value.h (struct internalvar): Add field 'endian'.
